# Minty

./: Cargo.toml
src/: main.rs
