[package]
name = "minty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { features = ["client", "standard_framework", "voice", "rustls_backend"], version = "0.10"}
songbird = "*" 

